test: add observer bridge unit tests
4 Node assert-based tests for parseStreamJson, formatObservationsPrompt,
loadObserverState, and message normalization. Runs via npm test:observer.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "discord": "node dist/channels/discord-client.js",
     "telegram": "node dist/channels/telegram-client.js",
     "queue": "node dist/queue-processor.js",
-    "visualize": "node dist/visualizer/team-visualizer.js"
+    "visualize": "node dist/visualizer/team-visualizer.js",
+    "test:observer": "tsc && node dist/test/test-observer.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
