fix(routing): add bare @mention fallback for team handoffs
SDK-spawned agents write prose @mentions instead of [@tag: msg] bracket
syntax, causing silent handoff failures. Fallback parser runs only when
no bracket tags match, resolves by agent ID or display name, strips
trailing punctuation. Includes 15 routing tests.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "telegram": "node dist/channels/telegram-client.js",
     "queue": "node dist/queue-processor.js",
     "visualize": "node dist/visualizer/team-visualizer.js",
-    "test:observer": "tsc && node dist/test/test-observer.js"
+    "test:observer": "tsc && node dist/test/test-observer.js",
+    "test:routing": "tsc && node dist/test/test-routing.js",
+    "test:all": "tsc && node dist/test/test-observer.js && node dist/test/test-routing.js"
   },
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.2.59",
