--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "visualize": "node dist/visualizer/team-visualizer.js",
     "test:observer": "tsc && node dist/test/test-observer.js",
     "test:routing": "tsc && node dist/test/test-routing.js",
-    "test:all": "tsc && node dist/test/test-observer.js && node dist/test/test-routing.js"
+    "test:agent": "tsc && node dist/test/test-agent.js",
+    "test:all": "tsc && node dist/test/test-observer.js && node dist/test/test-routing.js && node dist/test/test-agent.js"
   },
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.2.59",
